2018-11-10  Markus Gans  <guru.mail@muenster.de>
	* FListView now has a sort indicator to display the sort order

2018-11-07  Markus Gans  <guru.mail@muenster.de>
	* Use new type FColor for color values

2018-11-05  Markus Gans  <guru.mail@muenster.de>
	* FButton now uses the widget flags directly

2018-11-04  Markus Gans  <guru.mail@muenster.de>
	* Widget flags are now stored in a bit field

2018-11-03  Markus Gans  <guru.mail@muenster.de>
	* New method rgb2ColorIndex() to converts a 24-bit RGB color 
	  to a 256-color compatible approximation

2018-11-01  Markus Gans  <guru.mail@muenster.de>
	* Moved FTerm debug access methods to FTermDebugData

2018-10-29  Markus Gans  <guru.mail@muenster.de>
	* FTerm is now a data member of FVTerm
	* Fix FListBox prevListItem()
	* Setting the value can_change_color_palette in FTermcapQuirks

2018-10-26  Markus Gans  <guru.mail@muenster.de>
	* Building Fix for a negative value check (gcc < 4.8)
	* Adding the capacity() method to the FString class

2018-10-21  Markus Gans  <guru.mail@muenster.de>
	* Moving static attributes from FApplication to FWidget

2018-10-17  Markus Gans  <guru.mail@muenster.de>
	* Changed more variables from int to std::size_t

2018-10-14  Markus Gans  <guru.mail@muenster.de>
	* A width or height can not be negative. 
	  For that reason the change from int to std::size_t
	* FString fix for 32-bit architectures

2018-10-13  Markus Gans  <guru.mail@muenster.de>
	* Avoid using dynamic_cast so that you can compile Final Cut 
	  without Run-Time Type Information (RTTI). 
	  Thanks to user1095108 for reporting that.

2018-10-11  Markus Gans  <guru.mail@muenster.de>
	* FKeyboard now uses references for keyboard buffer passing

2018-10-09  Markus Gans  <guru.mail@muenster.de>
	* Terminal detection for newer vte libraries (>= 0.53.0)

2018-10-08  Markus Gans  <guru.mail@muenster.de>
	* Move all termcap code into FTermcap
	* Some small code splits

2018-10-05  Markus Gans  <guru.mail@muenster.de>